--- a/assets/css/staff.css
+++ b/assets/css/staff.css
@@ -119,11 +119,17 @@ button {
     font-size: 14px;
 }
 .attendance-date {
+    width:100% !important;
     font-size: 16px;
     font-weight: bold;
     text-align: left;
     color: #333;
     margin-bottom: 5px; /* Space below the date text */
+}
+
+#date-select{
+    width:20%;
+    margin-bottom:10px;
 }
 
 input[type="checkbox"] {
