--- a/assets/css/staff.css
+++ b/assets/css/staff.css
@@ -1,3 +1,4 @@
+/* Staff Dashboard page */
 .staff-dashboard-sections {
     display: flex;
     flex-direction: row;
@@ -74,7 +75,7 @@ button {
     color: white;
 }
 
-/* Ensure that the new attendance section does not overlap with the previous styles */
+/* Staff Attendance page*/
 .attendance-container {
     margin-top:100px;
     display: flex;
@@ -118,6 +119,7 @@ button {
 .attendance-record label {
     font-size: 14px;
 }
+
 .attendance-date {
     width:100% !important;
     font-size: 16px;
@@ -135,4 +137,116 @@ button {
 input[type="checkbox"] {
     width: 20px;
     height: 20px;
+}
+
+/* Staff Registration page */
+
+.form-container {
+    width: 320px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.form-row {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 16px;
+}
+
+.form-row input, select {
+    padding: 8px;
+    border: 1px solid #000000 !important;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+.form-row input:focus, select:focus {
+    outline: none;
+    border-color: #0066ff;
+}
+
+.full-width {
+    width: 100%;
+    margin-bottom: 16px;
+}
+
+.half-width {
+    width: 50%;
+}
+
+.form-row .gender-container {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    margin-bottom: 16px;
+}
+
+.radio-label {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.register-button {
+    width: 100%;
+    padding: 10px;
+    background-color: #0095ff;
+    color: white;
+    border: none;
+    border-radius: 20%;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.register-button:hover {
+    background-color: #0077cc;
+}
+
+/* Staff package page */
+.student-package-container-list {
+    margin-top:10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    overflow-y: auto;
+}
+
+.student-package-record {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #ccc; /* Border for each student record */
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Shadow for a similar look to the table */
+    background-color: #f9f9f9;
+    margin-bottom: 10px; /* Space between records */
+    
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.student-package-record .student-name {
+    flex: 1; /* Take the largest available space */
+    font-weight: bold;
+}
+
+.student-package-record .package-name {
+    display: flex;
+    gap: 15px;
+}
+
+.student-package-record label {
+    font-size: 14px;
+}
+
+#expanded-image {
+    max-width: 100%;
+    height: auto;
+    display: none;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: opacity 0.3s ease;
 }
