minor css change for manager page

--- a/assets/css/manager-staff.css
+++ b/assets/css/manager-staff.css
@@ -13,11 +13,12 @@ body {
 }
 
 .container {
+    margin-left: 50px;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    width: 100%;
+    width: 90%;
     box-sizing: border-box;
 }
 
